--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -6,7 +6,7 @@
     height: 45px;
     width: 45px;
     text-align: center;
-    background: #FFFFFF;
+    background: #F9F9F9;
     border-right: 1px solid $primary-border-color;
 
     .fa {
@@ -25,7 +25,6 @@
     width: 100%;
     box-sizing: border-box;
     top: 0;
-    background: rgba(#eeeeee, 1);
     border-bottom: 1px solid $primary-border-color;
     display: block;
   }
@@ -38,7 +37,6 @@ nav {
   width: 100%;
   text-align: center;
   display: none;
-  background: #FFFFFF;
 
   .show-nav & {
     display: block;
@@ -108,6 +106,9 @@ nav {
     @media (min-width: $bp-narrow-plus-1) {
       float: left;
       width: 33.333333333%;
+      a {
+        background: transparent;
+      }
 
       &:last-child {
         box-shadow: none;
