--- a/sass/partials/_list.scss
+++ b/sass/partials/_list.scss
@@ -1,3 +1,6 @@
+// 00B220 / green
+// 81b563 / lighter green
+
 $list-item-text-color: #444444;
 
 .list-content {
@@ -103,8 +106,8 @@ $list-item-text-color: #444444;
         width: 30px;
         right: 9px;
         top: 9px;
-        border: 3px solid $list-secondary-color;
-        background: transparent;
+        border: 3px solid $primary-border-color;
+        transition: all ease-in-out 0.2s;
         
         &:after {
           content: '';
@@ -115,10 +118,33 @@ $list-item-text-color: #444444;
           right: 9px;
           top: 2px;
           @include rotate(45deg);
-          border: 2px solid $list-primary-color;
+          border: 2px solid transparent;
           border-width: 0 5px 5px 0;
-          background: transparent;
           opacity: 0;
+          transition: all ease-in-out 0.2s;
+        }
+
+        &:hover {
+          border-color: $status-complete;
+          border-radius: 50%;
+
+          &:after {
+            border-color: #DDDDDD;
+            opacity: 1.0;
+          }
+        }
+      }
+
+      &.complete label {
+        border-color: $status-complete;
+        border-radius: 50%;
+
+        &:after {
+          border-color: $status-complete;
+        }
+
+        &:hover:after {
+          //border-color: #FFFFFF;
         }
       }
       
